--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spinners": "^0.11.0",
     "redux": "^4.0.5",
     "underscore": "^1.12.1",
     "web-vitals": "^0.2.4"
